--- a/master/index.html
+++ b/master/index.html
@@ -1,3 +1,11 @@
 <html>
-<center><strong>What Are you looking for?</strong></center>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="robots" content="noindex" />
+    <title>Default Site Index</title>
+  </head>
+
+  <body>
+    <center><strong><h1>What Are you looking for?</h1></strong></center>
+  </body>
 </html>
